default/objects/Contact_Relationship__c/Contact_Relationship__c.object-meta.xml
<CustomObject>
    <label>Contact Relationship</label>
    <nameField>
        <label>Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>