default/objects/Contact_Relationship__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>Contact Relationships</relationshipLabel>
    <relationshipName>Contact_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>