default/objects/Contact_Relationship__c/fields/Contact_Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Relationship_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Type</label>
    <referenceTo>Contact_Relationship_Type__c</referenceTo>
    <relationshipLabel>Contact Relationships</relationshipLabel>
    <relationshipName>Contact_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>