default/objects/Contact_Relationship__c/fields/From_Contact__c.field-meta.xml
<CustomField>
    <fullName>From_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Relationships (From Contact)</relationshipLabel>
    <relationshipName>Contact_Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>