default/objects/Contact_Relationship__c/fields/Relationship_Map__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Map__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Map</label>
    <referenceTo>Relationship_Map__c</referenceTo>
    <relationshipLabel>Contact Relationships</relationshipLabel>
    <relationshipName>Contact_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>