default/objects/Contact_Relationship__c/fields/To_Contact__c.field-meta.xml
<CustomField>
    <fullName>To_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Relationships (To Contact)</relationshipLabel>
    <relationshipName>Contact_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>